paint.css
Screen {
    overflow: auto;
}

#paint {
    layout: vertical;
}

#main-horizontal-split {
    layout: grid;
    grid-size: 2;
    grid-gutter: 1 2;
    grid-columns: 20 1fr;
    grid-rows: 1fr;
    margin: 0 0;
    min-height: 25;
    min-width: 26;
    /* height: 100%; */
}

#tools_box {
    layout: grid;
    grid-size: 2;
    grid-gutter: 0 1;
    grid-columns: 6;
    grid-rows: 3;
    padding: 1 1;
    width: 20;
    height: 100%;
    border-bottom: tall $panel-darken-2;
}

#tools_box Button:focus {
    /* disable focus highlight */
    /* in the future it may be important to prevent focus instead */
    text-style: none;
}

#tools_box Button.selected {
    background: $panel-lighten-3;
    border-bottom: tall $panel-lighten-2;
    border-top: tall $panel-darken-2;
}

#colors_box {
    layout: grid;
    grid-size: 2;
    grid-columns: 10 1fr;
    border-top: tall $panel-lighten-2;
}

#selected_colors {
    max-height: 5;
    overflow: hidden;
}

#selected_color {
    width: 6;
    height: 4;
    margin-left: 1;
}

#available_colors {
    layout: grid;
    grid-size: 14;
    grid-gutter: 0 1;
    grid-columns: 3;
    grid-rows: 2;
    /* padding: 1 1; */
    width: 100%;
}

Button {
    width: 100%;
    height: 100%;
}

